WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95006
The redundant phi elimination phase is not used and should be removed
https://bugs.webkit.org/show_bug.cgi?id=95006
Summary
The redundant phi elimination phase is not used and should be removed
Filip Pizlo
Reported
2012-08-25 12:28:13 PDT
Patch forthcoming.
Attachments
the patch
(16.66 KB, patch)
2012-08-25 12:30 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-08-25 12:30:04 PDT
Created
attachment 160568
[details]
the patch
WebKit Review Bot
Comment 2
2012-08-25 15:34:20 PDT
Comment on
attachment 160568
[details]
the patch Clearing flags on attachment: 160568 Committed
r126689
: <
http://trac.webkit.org/changeset/126689
>
WebKit Review Bot
Comment 3
2012-08-25 15:34:24 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 4
2012-08-25 21:01:57 PDT
A redundant redundant elimination elimination!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug