The redundant phi elimination phase is not used and should be removed https://bugs.webkit.org/show_bug.cgi?id=95006

Reviewed by Dan Bernstein.

Just removing dead code.

* CMakeLists.txt:
* GNUmakefile.list.am:
* JavaScriptCore.xcodeproj/project.pbxproj:
* Target.pri:
* dfg/DFGDriver.cpp:
* dfg/DFGRedundantPhiEliminationPhase.cpp: Removed.
* dfg/DFGRedundantPhiEliminationPhase.h: Removed.


Canonical link: https://commits.webkit.org/112871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126689 268f45cc-cd09-0410-ab3c-d52691b4dbfc